--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ button:hover {
     transition: 0.1s;
 }
 
-#soundInfo {
+#keyInfo {
     margin-bottom: 20px;
     font-size: 14px;
     text-align: left;
